implemented create product size functionality
