# internal/core/dto/size.go
@@ -1,0 +1,6 @@
+package dto
+
+type Size struct {
+	ID       int    `json:"size_id"`
+	SizeName string `json:"size_name"`
+}
